modification du champs current_password en currentPassword dans le controller ProfileController.php et dans la route api.php pour la mise à jour du mot de passe.
